--- a/index.html
+++ b/index.html
@@ -93,11 +93,25 @@
 
         <div class="table">
             <p>Please rate your level of agreement with the following statements.</p>
+
             <table>
                 <tr>
                     <td></td>
+                    <td>Strongly Disagree</td>
+                    <td>Disagree</td>
+                    <td>Agree</td>
+                    <td>Strongly Agree</td>
+                </tr>
+
+                <tr>
+                    <th>Our products are priced fairly.</th>
+                    <td><input type="radio" name="fairly" id=""> <label for="">1</label></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
             </table>
+
         </div>
     </form>
 
