--- a/index.html
+++ b/index.html
@@ -105,14 +105,32 @@
 
                 <tr>
                     <th>Our products are priced fairly.</th>
-                    <td><input type="radio" name="fairly" id=""> <label for="">1</label></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td><input type="radio" name="fairly" id="">1</td>
+                    <td><input type="radio" name="fairly" id="">2</td><td><input type="radio" name="fairly" id="">3</td><td><input type="radio" name="fairly" id="">4</td>
                 </tr>
+
+                <tr>
+                    <th>Our products are high quality.</th>
+                    <td><input type="radio" name="quality" id="">1</td>
+                    <td><input type="radio" name="quality" id="">2</td>
+                    <td><input type="radio" name="quality" id="">3</td>
+                    <td><input type="radio" name="quality" id="">4</td>
+                </tr>
+
+                <tr>
+                    <th>You would recommend our product to a friend or coworker.
+                    </th>
+                    <td><input type="radio" name="recommend" id="">1</td>
+                    <td><input type="radio" name="recommend" id="">2</td>
+                    <td><input type="radio" name="recommend" id="">3</td>
+                    <td><input type="radio" name="recommend" id="">4</td>
+                </tr>
+
             </table>
 
         </div>
+
+        <input type="submit" value="Submit">
     </form>
 
 </body>
